--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <!-- Basic Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BIMULIA LAND - Islamic Property Visionary</title>
-  <meta name="description" content="BIMULIA LAND - Pengembang properti Islami premium dengan konsep hunian berkelas dunia berdasarkan syariat Islam">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <!-- Primary Meta Tags -->
+  <title>BIMULIA LAND | Pengembang Properti Islami Premium di Jawa Barat</title>
+  <meta name="description" content="BIMULIA LAND - Pengembang properti syariah premium dengan konsep hunian berkelas dunia. Perumahan Islami modern dengan transaksi tanpa riba dan fasilitas terbaik.">
+  <meta name="keywords" content="properti islami, perumahan syariah, rumah syariah, developer islami, bimulia land, hunian premium, rumah tanpa riba, kertamulya residence, mea mulia estate agency">
+  
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#10b981">
+  <meta name="msapplication-TileColor" content="#0f172a">
+  <meta name="theme-color" content="#0f172a">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:title" content="BIMULIA LAND | Pengembang Properti Islami Premium di Jawa Barat">
+  <meta property="og:description" content="Pengembang properti syariah premium dengan konsep hunian berkelas dunia. Perumahan Islami modern dengan transaksi tanpa riba.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bimulialand.com">
+  <meta property="og:image" content="https://bimulialand.com/images/og-image.jpg">
+  <meta property="og:site_name" content="BIMULIA LAND">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BIMULIA LAND | Pengembang Properti Islami Premium">
+  <meta name="twitter:description" content="Konsep hunian syariah premium dengan fasilitas terbaik dan transaksi tanpa riba.">
+  <meta name="twitter:image" content="https://bimulialand.com/images/twitter-card.jpg">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "BIMULIA LAND",
+    "url": "https://bimulialand.com",
+    "logo": "https://bimulialand.com/images/logo.png",
+    "description": "Pengembang properti syariah premium dengan konsep hunian berkelas dunia",
+    "foundingDate": "2020",
+    "founder": {
+      "@type": "Person",
+      "name": "Founder Name"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Jl. Contoh No. 123",
+      "addressLocality": "Kuningan",
+      "addressRegion": "Jawa Barat",
+      "postalCode": "45500",
+      "addressCountry": "ID"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+62-123-4567-890",
+      "contactType": "customer service",
+      "email": "info@bimulialand.com",
+      "availableLanguage": ["Indonesian", "English"]
+    },
+    "sameAs": [
+      "https://facebook.com/bimulialand",
+      "https://instagram.com/bimulialand",
+      "https://youtube.com/bimulialand"
+    ]
+  }
+  </script>
   
   <!-- Preload resources -->
   <link rel="preload" href="https://cdn.tailwindcss.com" as="script">
